# loadout

./: .gitignore  Cargo.toml  appxmanifest.xml  winapp.yaml
src/: config.rs  error.rs  game.rs  main.rs
src/pages/: library.rs  mod.rs  setup.rs
